assets/css/style.css
:root{

    --darkTeal: #4D869C;
    --midTeal: #7AB2B2;
    --lightestBlue: #EEF7FF;
    --lightBlue: #CDE8E5;
}

@font-face {
    font-family: 'raleway';
    src: url('../fonts/webfontkit-20240601-161344/raleway-medium-webfont.woff2') format('woff2'), 
         url('../fonts/webfontkit-20240601-161344/raleway-medium-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

html{
    font-family: 'raleway','Courier New', Courier, monospace;
}

/*  HEADER  */

header{
    width:100%;
    background-color: var(--darkTeal);
    color:var(--lightestBlue);

}

header h1{
    display:inline;
    padding: 5px 5px 5px 30px;
    color: var(--darkTeal);
    background-color: var(--lightestBlue);
    font-size: 300%;

}

/* NAV BAR */

nav{
    background-color: var(--darkTeal);
    display:flex;
    justify-content:end;
    padding-bottom: 20px;
}

nav a{
    color:var(--lightestBlue);
    text-decoration:none;
    margin: 10px 10px 0px 40px;

    
}

nav a:hover{
    color:var(--midTeal);
}

/* HERO */

.hero{

    /* Code referenced from: https://www.w3schools.com/howto/howto_css_hero_image.asp */
      background-image: url("../images/computerImg.jpg");
      height: 200px;
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
      position: relative;
      margin-bottom: 100px;
    
    }



/* BODY */

body{
    background-color: var(--lightestBlue);


}

.blocks-wrapper{
    display:flex;
    flex-direction:column;
    align-items:start;
}



/* MAIN INFO SECTIONS */

.infoblock{
    position:relative;
    margin-bottom: 100px;
    display:flex;
    align-items: flex-start;
    margin-left: 30%;



}

.contents{
    padding-left: 10px;
    border-left: 5px solid var(--darkTeal);

}

.infoblock h2{
    position:absolute;
    font-size: 200%;
    color: var(--darkTeal);
    left: -200px;


}



/* PORTFOLIO STYLING */

.work-list{
    display:flex;
    flex-wrap: wrap;
    width: 55%;
    row-gap: 25px;

}

.ex{
    width: 400px;
    height: 250px;
    flex: 0 0 46%;
    position:relative;
    margin:auto;

}

.ex img{
    width:100%;
    height:100%;
    object-fit: cover;
    border: var(--darkTeal) 10px solid;
}

.ex img:hover{
    filter:grayscale(1.3);
}


#prime{
    flex: 1 0 100%;
}

.ex h3{
    text-decoration:none;
    background-color: var(--darkTeal);
    display:inline;
    position:absolute;
    left:0;
    top:50%;
    font-size: 150%;
    color:var(--lightestBlue);
    margin-left: 10px;
    padding: 7px;
    
}

/* QUERIES TO RESPOND TO SCREEN SIZE */

@media screen and (max-width: 768px){
    .infoblock h2{
        position:relative;
        left:0;
    }
    .work-list, nav, .infoblock{
        flex-direction:column;
    }
    .infoblock{
        margin-left: 10%;
    }






}

